Better, faster, stronger

--- a/DarkScript 2/DarkScript 2.csproj
+++ b/DarkScript 2/DarkScript 2.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventProject.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
     </Compile>
